# kmai

./: .nu.swp  Cargo.toml  build.rs
assets/shaders/: enums.wgsl  tap.wgsl  utils.wgsl
assets/textures/hit/: atlasr.ktx
mobile/: Cargo.toml  manifest.yaml
mobile/src/: lib.rs
src/: config.rs  lib.rs  main.rs  sensor.rs  view.rs
src/effect/: interp.rs  mod.rs
src/play/: lanes.rs  mod.rs  timeline.rs
