[package]
name = "mobile"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "kmai"
crate-type = ["staticlib", "cdylib"]

[dependencies]
kanimai = { path = ".." }                             # ToDo
bevy = { version = "0.13", default-features = false }

# As long as Kira doesn't expose a feature for this, we need to enable it
# See https://github.com/tesselode/kira/pull/51
[target."cfg(target_os = \"android\")".dependencies.cpal]
version = "0.15"
features = ["oboe-shared-stdcxx"]

[target."cfg(target_os = \"android\")".dependencies.bevy]
version = "*"
features = ["android_shared_stdcxx"]

[package.metadata.android]
package = "work.stdpi.kanimai"            # ToDo
apk_name = "kanimai"                      # ToDo same as GAME_OSX_APP_NAME in release workflow
assets = "../assets"
strip = "strip"
resources = "../build/android/res"
build_targets = ["aarch64-linux-android"]

[package.metadata.android.sdk]
target_sdk_version = 34

[package.metadata.android.application]
icon = "@mipmap/icon"
label = "kanimai"     # ToDo
